feat(et-4): conversation